# static-router

./: Cargo.toml  README.md
static-router/: Cargo.toml  README.md
static-router-macros/: Cargo.toml
static-router-macros/src/: lib.rs  mime.rs
static-router/src/: lib.rs
