[package]
description = "Macros for the `static-router` crate"
documentation = "https://docs.rs/static-router"
edition = "2021"
license = "MIT OR Apache"
name = "static-router-macros"
repository = "https://github.com/mattfbacon/static-router"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
litrs = "0.2"
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
walkdir = "2"
